[develop] fix OEMiddleWrap Blank Block

--- a/src/assets/css/ide.css
+++ b/src/assets/css/ide.css
@@ -5372,7 +5372,7 @@ button#property-app-keypair {
     opacity: 1;
     background: none; }
 
-.OEPanelRight:not(.hidden) ~ .OEMiddleWrap {
+.OEPanelRight:not(.state):not(.hidden) ~ .OEMiddleWrap {
   right: 288px; }
 
 .OEPanelRight:not(.hidden).state ~ .OEMiddleWrap {
